--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -10,6 +10,10 @@
     </div>
   <% end %>
   <div>
+    <%= form.label :email, style: "display: block" %>
+    <%= form.email_field :email %>
+  </div>
+  <div>
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
   </div>
