--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,4 +1,12 @@
-<h1>Editing player</h1>
+<nav class="breadcrumb">
+  <ul>
+    <li><%= link_to t('games.index.title'), games_path(game_id: @player.game_id) %></li>
+    <li><%= link_to @player.game.name, @player.game %></li>
+    <li><%= link_to @player.name, player_path(@player) %></li>
+    <li><%= @title %></li>
+  </ul>
+</nav>
+<h1><%= @title %></h1>
 <%= render "form", player: @player %>
 <br>
 <div>
