--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -9,6 +9,7 @@
 <table>
   <thead>
     <tr>
+      <th><%= Player.human_attribute_name("email") %></th>
       <th><%= Player.human_attribute_name("name") %></th>
       <th><%= Player.human_attribute_name("description") %></th>
       <th>Actions</th>
@@ -16,11 +17,12 @@
   </thead>
   <% @players.each do |player| %>
     <tr>
+      <td><%= player.email %></td>
       <td><%= player.name %></td>
       <td><%= player.description %></td>
       <td>
         <ul>
-          <li><%= link_to 'Mission card', public_card_path(player.mission_card.token) %></li>
+          <li><%= link_to 'Mission card', public_card_path(player.mission_card.token) if player.mission_card %></li>
           <li><%= link_to 'Victim card', public_card_path(player.victim_card.token) if player.victim_card %></li>
         </ul>
       </td>
