--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -6,5 +6,5 @@
 <%= render "form", game: @game %>
 <div>
   <%= link_to t('games.show.title'), @game %> |
-  <%= link_to t('games.index.title'), games_path %>
+  <%= games_link %>
 </div>
