--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -19,7 +19,7 @@
 </div>
 <details open>
   <summary>🎯 <%= Card.model_name.human(count: @cards_in_table) %></summary>
-  <%= render 'cards/table', cards: @cards_in_table, players_list: @game.get_players_list.sort, actions_list: @actions.sort %>
+  <%= render 'cards/table', cards: @cards_in_table, players_list: @game.players.sort, actions_list: @actions.sort %>
 </details>
 <details>
   <summary>😀 <%= Game.human_attribute_name("players") %></summary>
@@ -27,8 +27,7 @@
     <div>
       <p><%= t 'players_alive' %></p>
       <ul>
-        <%# TODO %>
-        <% @game.players.sort.each do |player| %>
+        <% @game.alive_players.sort.each do |player| %>
           <li><%= render 'games/player', player: player %></li>
         <% end %>
       </ul>
@@ -36,8 +35,7 @@
     <div>
       <p><%= t 'players_dead' %></p>
       <ul>
-        <%# TODO %>
-        <% @game.players.sort.each do |player| %>
+        <% @game.dead_players.sort.each do |player| %>
           <li><del><%= render 'games/player', player: player %></del></li>
         <% end %>
       </ul>
@@ -66,6 +64,7 @@
   <summary>⚠ <%= t 'cards_dangerous_actions' %></summary>
   <div class="buttons">
     <%= link_to "🖊 #{t 'games.edit.title'}", edit_game_path(@game), role: :button, class: "secondary" if @game.started? %>
+    <%= link_to "🖊 #{t 'players.index.title'}", game_players_path(game_id: @game.id), role: :button,class: "secondary"  %>
     <%= button_to "🗑 #{t 'games.destroy.title'}", @game, method: :delete, role: :button, class: "secondary outline" %>
   </div>
 </details>
