scaffold some mailers

--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -1,5 +1,5 @@
 <article class="card-print">
-  <header><%= t 'card_print.your_mission' %></header>
+  <header>🎯 <%= t 'card_print.your_mission' %></header>
   <p><%= t('card_print.need_to_make', target: card.target.pretty ).html_safe %><br/>
     <strong><%= card.action %></strong>
   </p>
