--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,5 +1,19 @@
-<div>
-  <% @cards.each do |card| %>
-    <%= render 'cards/card_print', card: card %>
+<nav class="breadcrumb">
+  <ul>
+    <li><%= games_link %></li>
+    <li><%= link_to @game.name, @game %></li>
+    <li><%= @title %></li>
+  </ul>
+</nav>
+<h1><%= @title %></h1>
+<details <%= 'open' if @is_search_active %> %>
+  <summary>Rechercher <%if @is_search_active%> <mark>résultats filtrés</mark> <% end %></summary>
+  <%= form_with(method: :get) do |form| %>
+    <%= form.label :player, Card.human_attribute_name("player") %>
+    <%= form.select :player, options_for_select(@players_options, params[:player]), include_blank: true %>
+    <%= form.label :action, Card.human_attribute_name("action") %>
+    <%= form.select :card_action, options_for_select(@actions_options, params[:card_action]), include_blank: true %>
+    <%= form.submit "Rechercher" %>
   <% end %>
-</div>
+</details>
+<%= render 'cards/table', cards: @cards %>
