move player table

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div>
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, required: true %>
     <small><%= t('player_form.name_help') %></small>
   </div>
   <div>
