--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,8 +1,12 @@
-<header class="title-breadcrumb">
-  <h1><%= game_link @game %> / <%= @title %></h1>
-  <%= render 'games/navbar', game: @game %>
-</header>
-<%= render 'players/table', players: @players %>
+<%= render 'games/navbar', game: @game %>
+<h1><%= game_link @game %> / <%= @title %></h1>
+<div class="my-grid">
+  <% @players.each do |player| %>
+    <div class="col-xs-12 col-md-6 col-lg-4">
+      <%= render 'players/card_admin', player: player %>
+    </div>
+  <% end %>
+</div>
 <details>
   <summary><%= t('players.new.title') %>
   </summary>
