--- a/app/assets/stylesheets/application/game-navbar.css
+++ b/app/assets/stylesheets/application/game-navbar.css
@@ -1,7 +1,7 @@
 .game-navbar {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  background-color: var(--primary-focus);
+  padding: var(--spacing);
+  border-radius: var(--border-radius);
 
   display: flex;
   flex-wrap: wrap;
@@ -12,7 +12,12 @@
   margin-bottom: var(--spacing);
 }
 
-.game-navbar li {
-  list-style: none;
-  margin: 0;
+.game-navbar__item {
+  display: flex;
+  gap: calc(var(--spacing) / 2);
+  align-items: center;
+}
+
+.game-navbar__item__icon {
+  font-size: calc(var(--font-size) * 1.2);
 }
