--- a/app/views/games/_navbar.html.erb
+++ b/app/views/games/_navbar.html.erb
@@ -1,8 +1,21 @@
-<ul class="game-navbar">
+<nav class="game-navbar">
   <% if game.token %>
-    <li><%= link_to "📊 #{t 'games.dashboard.title'}", game_dashboard_path(game.token) %></li>
+    <%= link_to game_dashboard_path(game.token), class: "game-navbar__item" do %>
+      <span class="game-navbar__item__icon">📊</span><%= t 'games.dashboard.title' %>
+    <% end %>
   <% end %>
-  <li><%= link_to "🃏 #{t 'cards.index.title'} (#{game.cards.count})", game_cards_path(game.id) %></li>
-  <li><%= link_to "🎩 #{t 'players.index.title'} (#{game.players.count})", game_players_path(game_id: game.id)  %></li>
-  <li><%= link_to "🖊 #{t 'games.edit.title'}", edit_game_path(game)  %></li>
-</ul>
+  <%= link_to game_cards_path(game.id), class: "game-navbar__item"  do %>
+    <span class="game-navbar__item__icon">🃏</span>
+    <span><%= t 'cards.index.title' %></span>
+    <span class="badge"><%= game.cards.count%></span>
+  <% end %>
+  <%= link_to game_players_path(game_id: game.id), class: "game-navbar__item"  do %>
+    <span class="game-navbar__item__icon">🎩</span>
+    <span><%= t 'players.index.title' %></span>
+    <span class="badge"><%= game.players.count %></span>
+  <% end %>
+  <%= link_to edit_game_path(game), class: "game-navbar__item"  do %>
+    <span class="game-navbar__item__icon">🖊</span>
+    <span><%= t 'games.edit.title' %></span>
+  <% end %>
+</nav>
