--- a/app/assets/stylesheets/application/badge.css
+++ b/app/assets/stylesheets/application/badge.css
@@ -6,3 +6,11 @@
   font-size: calc(var(--font-size) * 0.8);
   font-weight: 800;
 }
+
+.badge--dead {
+  background-color: var(--del-color);
+}
+
+.badge--alive {
+  background-color: var(--ins-color);
+}
