--- a/app/views/cards/_table.html.erb
+++ b/app/views/cards/_table.html.erb
@@ -28,7 +28,7 @@
         <td>
           <ul>
             <li><%= link_to 'Lien de la carte', public_card_path(card.token) %></li>
-            <li><%= link_to t('cards.edit.title'), edit_game_card_path(game_id: card.game_id, id: card.id) %></li>
+            <li><%= edit_card_link card %></li>
           </ul>
         </td>
       </tr>
