--- a/app/views/games/_dashboard2.html.erb
+++ b/app/views/games/_dashboard2.html.erb
@@ -1,21 +1,21 @@
 <div class="player-cards">
-  <% dashboard.each do |player, data| %>
+  <% dashboard.each do |row| %>
     <div class="player-cards__player">
-      <p><strong><%= player.name %></strong> 🥇
-        <% if player.description %>
+      <p><strong><%= row[:player].name %></strong> 🥇
+        <% if row[:player].description %>
           <br />
-          <%= player.description %>
+          <%= row[:player].description %>
         <% end %>
       </p>
     </div>
-    <% if data[:cards].size > 0 %>
+    <% if row[:cards].size > 0 %>
       <details class="player-cards__actions-done">
-        <summary class="badge"><strong><%= data[:cards].size %></strong> kills <%= '💀' * data[:cards].size %></summary>
+        <summary class="badge"><strong><%= row[:cards].size %></strong> kills <%= '💀' * row[:cards].size %></summary>
         <div class="player-cards__actions-done__content">
-          <% data[:cards].each do |card| %>
+          <% row[:cards].each do |card| %>
             <div class="player-cards__action player-cards__action--done">
               <p><%= card.action %> -- Fait à <%= format_time card.done_at %></p>
-              <p><%= public_card_link data[:current] %></p>
+              <p><%= public_card_link card %></p>
             </div>
             <!-- dead player -->
             <div class="player-cards__player">
@@ -26,10 +26,10 @@
       </details>
     <% end %>
     <div class="player-cards__action">
-      <p><%= data[:current].action %></p>
+      <p><%= row[:current].action %></p>
       <p>
-        <%= public_card_link data[:current] %> |
-        <%= edit_card_link data[:current] %>
+        <%= public_card_link row[:current] %> |
+        <%= edit_card_link row[:current] %>
       </p>
     </div>
   <% end %>
