--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,11 +1,35 @@
 <h1><%= @title %></h1>
+<p>Le "killer" est un jeu dans lequel tu devras faire preuve de créativité et mettre en place divers stratagèmes pour tenter d'éliminer un à un les autres participants tout en protégeant leur propre vie.</p>
+<h2><%= t 'game_rules' %></h2>
+<%= render 'games/rules' %>
 <h2>Exemple concret</h2>
-<h3>Etape 1: Mise en place de la partie</h3>
-<p>Chaque joueur se voit attriubé une carte</p>
-<%= render 'games/dashboard2', dashboard: @exemple1, readonly: true %>
-<h3>Premier kill</h3>
-<p><%= @exemple1[1][:player].name %> a accompli sa carte "<%= @exemple1[1][:current].action %>" à <%= @exemple1[1][:current].target.name %>.</p>
-<p>Il récupère donc sa carte et sa nouvelle cible devient <%= @exemple1[2][:current].target.name %></p>
-<%= render 'games/dashboard2', dashboard: @exemple2, readonly: true %>
-<h3>Deuxièmme kill</h3>
-<%= render 'games/dashboard2', dashboard: @exemple3, readonly: true %>
+<div class="grid mb-2">
+  <div>
+    <h3>Etape 1: Mise en place de la partie</h3>
+    <p>Chaque joueur se voit attribuer une carte.</p>
+  </div>
+  <%= render 'games/dashboard2', dashboard: @exemple1, readonly: true %>
+</div>
+<div class="grid mb-2">
+  <div>
+    <h3>Premier kill</h3>
+    <p><%= card_done_sentence @exemple1[1] %></p>
+    <p>Il récupère donc sa carte et sa nouvelle cible devient <%= @exemple1[2][:current].target.name %></p>
+  </div>
+  <%= render 'games/dashboard2', dashboard: @exemple2, readonly: true %>
+</div>
+<div class="grid mb-2">
+  <div>
+    <h3>Deuxièmme kill</h3>
+    <p><%= card_done_sentence @exemple2[0] %></p>
+    <p>Par conséquent, il remporte TOUTES les cartes de <%= @exemple2[0][:current].target.name %>, incluant celles qu'il avait gagné auparavant.</p>
+  </div>
+  <%= render 'games/dashboard2', dashboard: @exemple3, readonly: true %>
+</div>
+<div class="grid mb-2">
+  <div>
+    <h3>Dernier kill</h3>
+    <p><%= card_done_sentence @exemple3[1] %></p>
+  </div>
+  <%= render 'games/dashboard2', dashboard: @exemple4, readonly: true %>
+</div>
