--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,36 +1,43 @@
-<h1><%= @title %></h1>
-<p class="text-center"><%= render "games/dashboards_list" %></p>
-<p>Le "killer" est un jeu dans lequel tu devras faire preuve de créativité et mettre en place divers stratagèmes pour tenter d'éliminer un à un les autres participants tout en protégeant leur propre vie.</p>
+<h1 style="display: none"><%= @title %></h1>
+<% if false %>
+  <p class="text-center"><%= render "games/dashboards_list" %></p>
+<% end %>
 <div class="balloons">
   <%= render 'shared/balloon', content: t('balloons_example')[0], left: true %>
   <%= render 'shared/balloon', content: t('balloons_example')[1], right: true %>
   <%= render 'shared/balloon', content: t('balloons_example')[2], left: true %>
   <%= render 'shared/balloon', content: t('balloons_example')[3], right: true %>
 </div>
-<h2><%= t 'game_rules' %></h2>
-<%= render 'games/rules' %>
 <h2><%= t 'how_it_works.title' %></h2>
-<details>
-  <summary>📝 <%= t('how_it_works.steps.create.title') %></summary>
-  <p>Il te suffit de <%= link_to t('games.new.title'), new_game_path %> en renseignant:</p>
-  <ul>
-    <li>Les <strong>partipants</strong></li>
-    <li>Les <strong>actions</strong>, on t'en propose plein. Tu n'as qu'à choisir.</li>
-  </ul>
-  <p>Le formulaire est ridicule, il se remplis en quelques secondes.</p>
-</details>
-<details>
-  <summary>⏳ <%= t('how_it_works.steps.generate.title') %></summary>
-  <%= render 'shared/sentences', key: "how_it_works.steps.generate.description" %>
-</details>
-<details>
-  <summary>🖨 <%= t('how_it_works.steps.print.title') %></summary>
-  <%= render 'shared/sentences', key: "how_it_works.steps.print.description" %>
-  <div class="text-center">
-    <%= image_tag 'card-example.png', alt: "Exemple d'une carte a imprimmer et découper" %>
-  </div>
-</details>
-<details>
-  <summary>🚬 <%= t('how_it_works.steps.monitor.title') %></summary>
-  <%= render 'shared/sentences', key: "how_it_works.steps.monitor.description" %>
-</details>
+<div class="grid">
+  <article>
+    <header>TODO</header>
+    <details>
+      <summary>📝 <%= t('how_it_works.steps.create.title') %></summary>
+      <p>Il te suffit de <%= link_to t('games.new.title'), new_game_path %> en renseignant:</p>
+      <ul>
+        <li>Les <strong>partipants</strong></li>
+        <li>Les <strong>actions</strong>, on t'en propose plein. Tu n'as qu'à choisir.</li>
+      </ul>
+      <p>Le formulaire est ridicule, il se remplis en quelques secondes.</p>
+    </details>
+    <details>
+      <summary>⏳ <%= t('how_it_works.steps.generate.title') %></summary>
+      <%= render 'shared/sentences', key: "how_it_works.steps.generate.description" %>
+    </details>
+    <details>
+      <summary>🖨 <%= t('how_it_works.steps.print.title') %></summary>
+      <%= render 'shared/sentences', key: "how_it_works.steps.print.description" %>
+      <div class="text-center">
+        <%= image_tag 'card-example.png', alt: "Exemple d'une carte a imprimmer et découper" %>
+      </div>
+    </details>
+    <details>
+      <summary>🚬 <%= t('how_it_works.steps.monitor.title') %></summary>
+      <%= render 'shared/sentences', key: "how_it_works.steps.monitor.description" %>
+    </details>
+  </article>
+  <article>
+    <header>Exemple d'une partie</header>
+  </article>
+</div>
