--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,5 +39,6 @@
   </article>
   <article>
     <header>Exemple d'une partie</header>
+    <%= render 'games/dashboard2', dashboard: @exemple1, readonly: true %>
   </article>
 </div>
