--- a/app/views/pages/_game_example.html.erb
+++ b/app/views/pages/_game_example.html.erb
@@ -37,40 +37,76 @@ cards.map{|card| card.done_at = Time.now}
 ]
 
 @exemple4 = [
-  { player: players[3], cards: [cards[0], cards[1], cards[2]], current: nil },
+  { player: players[3], cards: [cards[0], cards[1], cards[2]], current: nil, rank: 1 },
 ]
 %>
+<%# <input id="game-example__step" type="range" min="1" max="4" value="1" step="1" id="myRange" /> %>
 <div id="game-example">
-  <input type="radio" id="game-example__step1" name="game-example__step" checked>
-  <input type="radio" id="game-example__step2" name="game-example__step">
-  <input type="radio" id="game-example__step3" name="game-example__step">
-  <input type="radio" id="game-example__step4" name="game-example__step">
-  <hr/>
-  <%# steps %>
-  <div id="game-example__step1__content" class="grid mb-2 game-example__step">
-    <%= render 'games/dashboard2', dashboard: @exemple1, readonly: true %>
+  <div data-step="1" class="grid game-example__step">
     <div>
+      <h3>Etape 1/4: Début de partie</h3>
+      <p>Tu crée ta partie en renseignant les joueurs et les actions</p>
       <p>Chaque joueur se voit attribuer une carte.</p>
+      <p>
+        <a href="#" onclick="toggleNextGameExemple(event)" data-step="2">Etape suivante</a>
+      </p>
+    </div>
+    <div>
+      <%= render 'games/dashboard2', dashboard: @exemple1, readonly: true %>
     </div>
   </div>
-  <div id="game-example__step2__content" class="grid mb-2  game-example__step">
-    <%= render 'games/dashboard2', dashboard: @exemple2, readonly: true %>
+  <div data-step="2" class="grid mb-2 game-example__step">
     <div>
+      <h3>Etape 2/4: Premier meurte</h3>
       <p><%= card_done_sentence @exemple1[1] %></p>
       <p>Il récupère donc sa carte et sa nouvelle cible devient <%= @exemple1[2][:current].target.name %></p>
+      <p>
+        <a href="#" onclick="toggleNextGameExemple(event)" data-step="1">Etape précédente</a> |
+        <a href="#" onclick="toggleNextGameExemple(event)" data-step="3">Etape suivante</a>
+      </p>
+    </div>
+    <div>
+      <%= render 'games/dashboard2', dashboard: @exemple2, readonly: true %>
     </div>
   </div>
-  <div id="game-example__step3__content" class="grid mb-2  game-example__step">
-    <%= render 'games/dashboard2', dashboard: @exemple3, readonly: true %>
+  <div data-step="3" class="grid mb-2 game-example__step">
     <div>
+      <h3>Etape 3/4: Second meurte</h3>
       <p><%= card_done_sentence @exemple2[0] %></p>
       <p>Par conséquent, il remporte TOUTES les cartes de <%= @exemple2[0][:current].target.name %>, incluant celles qu'il avait gagné auparavant.</p>
+      <p>
+        <a href="#" onclick="toggleNextGameExemple(event)" data-step="2">Etape précédente</a> |
+        <a href="#" onclick="toggleNextGameExemple(event)" data-step="4">Etape suivante</a>
+      </p>
+    </div>
+    <div>
+      <%= render 'games/dashboard2', dashboard: @exemple3, readonly: true %>
     </div>
   </div>
-  <div id="game-example__step4__content" class="grid mb-2  game-example__step">
-    <%= render 'games/dashboard2', dashboard: @exemple4, readonly: true %>
+  <div data-step="4" class="grid mb-2 game-example__step">
     <div>
+      <h3>Etape 4/4: Fin de la partie</h3>
       <p><%= card_done_sentence @exemple3[1] %></p>
+      <p>
+        <a href="#" onclick="toggleNextGameExemple(event)" data-step="3">Etape précédente</a>
+      </p>
+    </div>
+    <div>
+      <%= render 'games/dashboard2', dashboard: @exemple4, readonly: true %>
     </div>
   </div>
 </div>
+<script>
+  function displayStep(step) {
+    document.querySelectorAll(`.game-example__step`).forEach(el => el.classList.add('hide'));
+    document.querySelector(`.game-example__step[data-step="${step}"]`).classList.remove('hide')
+  }
+
+  function toggleNextGameExemple (event) {
+    event.preventDefault();
+    const step = event.target.getAttribute('data-step');
+    displayStep(step);
+  }
+
+  displayStep(1)
+</script>
